crates/oxc_react_compiler/tests/snapshots/destructuring-object-param-default.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/destructuring-object-param-default.js
---
function Component(t0) {
	const { a: t1 } = t0;
	const a = t1 === undefined ? 2 : t1;
	return a;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: ["TodoAdd"],
	isComponent: "TodoAdd"
};
