crates/oxc_react_compiler/tests/snapshots/destructuring-object-pattern-within-rest.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/destructuring-object-pattern-within-rest.js
---
function Component() {}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ value: ["y", { z: "z!" }] }]
};
