crates/oxc_react_compiler/tests/snapshots/destructuring-with-conditional-as-default-value.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/destructuring-with-conditional-as-default-value.js
---
function Component(props) {
	const [t0] = props.y;
	const x = t0 === undefined ? true ? 1 : 0 : t0;
	return x;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ y: [] }]
};
