crates/oxc_react_compiler/tests/snapshots/do-while-early-unconditional-break.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/do-while-early-unconditional-break.js
---
import { c as _c } from "react/compiler-runtime";
function Component(props) {
	const $ = _c(1);
	let x;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		x = [
			1,
			2,
			3
		];
		mutate(x);
		$[0] = x;
	} else {
		x = $[0];
	}
	return x;
}
